Fixes to alignment on homepage
Aligned images and added linework

--- a/Styles.css
+++ b/Styles.css
@@ -13,7 +13,7 @@ body{
   font-family: BasicSans;
   margin:auto;
   display: grid;
-  grid-template-columns: 1.3fr 1fr 1fr;
+  grid-template-columns: 1.8fr 1fr 1fr;
   grid-template-rows: .3fr auto .6fr .3fr;
   grid-row-gap: 10px;
   grid-column-gap: 10px;
@@ -44,6 +44,11 @@ header {
   justify-content: flex-end;
   margin-left: auto;
   border: 1px solid black;
+  align-items: flex-end;
+}
+.headertext p2{
+  padding: 20px;
+  font-size: 80%;
 }
 aside {
   background: #fa923f;
@@ -64,25 +69,20 @@ main {
 .nested{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows:auto auto;
-
+  grid-template-rows: auto auto;
 }
 .nested *{
   border: 1px solid black;
-  margin 0;
 }
-.content1{
-}
-.content2{
+.content1, .content2{
+  margin-top: 4%;
 }
 .content3{
 }
 .content4{
 }
 
-p2{
-  padding: 20px;
-}
+
 footer {
   background: #142f63;
   grid-area: footer;
